optimized and updated node pom.xml